AC_PREREQ(2.59)
AC_INIT(csrc/v.cpp)
AM_INIT_AUTOMAKE(v,0.4m)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CXX

AC_CHECK_FUNCS([sqrt strchr])
AC_CHECK_HEADERS([stdlib.h string.h])
AC_C_CONST
AC_FUNC_MALLOC
AC_FUNC_VPRINTF
AC_HEADER_STDBOOL
AC_HEADER_STDC
AC_TYPE_SIZE_T

AC_PROG_LIBTOOL
AC_PROG_INSTALL

AC_OUTPUT(Makefile csrc/Makefile)
