bin_PROGRAMS = v
vdir = $(datadir)/v
v_SCRIPTS = std.v
v_SOURCES = allocator.cpp allocator.h \
			buffcharstream.cpp buffcharstream.h \
			num.h defs.h charstream.h cmd.h \
			cmdquote.cpp cmdquote.h \
			common.cpp common.h \
			consolecharstream.cpp consolecharstream.h \
			filecharstream.cpp filecharstream.h \
			lexer.cpp lexer.h \
			lexiterator.cpp lexiterator.h \
			lexstream.cpp lexstream.h \
			prologue.cpp prologue.h \
			ptr.h quote.h token.h \
			quoteiterator.cpp quoteiterator.h \
			quotestream.cpp quotestream.h \
			sym.cpp sym.h \
			term.cpp term.h \
			tokeniterator.h tokenstream.h \
			type.h vx.h \
			v.cpp v.h \
			vexception.cpp vexception.h \
			vframe.cpp vframe.h \
			vstack.cpp vstack.h


